<resources>
    <string name="app_name">Capitals</string>
    <string name="Capital">Столицы</string>
    <string name="Name">Никнейм</string>
    <string name="NewGame">Новая Игра</string>
    <string name="Friends">Друзья</string>
    <string name="HowPlay">Как Играть</string>
    <string name="AboutCountries">О Странах</string>
    <string name="AboutGame">Об Игре</string>
    <string name="Single">Одиночная Игра</string>
    <string name="Round1">Раунд 1</string>
    <string name="Round2">Раунд 2</string>
    <string name="Round3">Раунд 3</string>
    <string name="Round4">Раунд 4</string>
    <string name="Round5">Раунд 5</string>
    <string name="Round6">Раунд 6</string>
    <string name="Total">Итого</string>

</resources>