<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#D2509B76">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/gear"
            android:id="@+id/settings"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/Capital"
            android:textColor="#0096FF"
            android:textSize="37sp" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:paddingTop="60dp"
        android:text="@string/Name"
        android:textColor="#000000"
        android:textSize="25sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/NewGame"
        android:textColor="#000000"
        android:textSize="30sp"
        android:paddingTop="100dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="145dp"
        android:textSize="20sp"
        android:text="@string/Single"
        android:background="@color/colorPrimary"
        android:id="@+id/single"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="210dp"
        android:layout_marginBottom="145dp"
        android:textSize="20sp"
        android:text="@string/Friends"
        android:background="@color/colorPrimary"
        android:id="@+id/friends"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="270dp"
        android:layout_marginBottom="145dp"
        android:textSize="20sp"
        android:text="@string/HowPlay"
        android:background="@color/colorPrimary"
        android:id="@+id/howPlay"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="330dp"
        android:layout_marginBottom="145dp"
        android:textSize="20sp"
        android:text="@string/AboutCountries"
        android:background="@color/colorPrimary"
        android:id="@+id/aboutCountries"/>

</RelativeLayout>